# zego-express-flutter-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPS.yaml  README.md  README_zh.md  analysis_options.yaml  dartdoc_options.yaml  pubspec.yaml  zego_defines.h
android/: .gitignore  DEPS  build.gradle  settings.gradle
assets/: ZegoExpressWebFlutterWrapper.js
doc/: v3.0.0+_upgrade_guide.md  v3.0.0+_upgrade_guide_zh.md  v3.0.0_upgrade_guide.md  v3.0.3_upgrade_guide.md  v3.0.3_upgrade_guide_zh.md
docs/: v2.23.0_upgrade_guide.md  v2.23.0_upgrade_guide_zh.md  v3.0.0_upgrade_guide.md  v3.0.0_upgrade_guide_zh.md
example/: README.md  pubspec.yaml
example/android/: .gitignore  build.gradle  gradle.properties
example/ios/: .gitignore  Podfile
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: .gitignore  DEPS  download.sh  zego_express_engine.podspec  zego_express_flutter_sdk.podspec
ios/Classes/: SwiftZegoExpressFlutterSdkPlugin.swift  ZegoCustomVideoCaptureManager.h  ZegoCustomVideoCaptureManager.m  ZegoCustomVideoDefine.h  ZegoCustomVideoDefine.m  ZegoCustomVideoProcessManager.h  ZegoCustomVideoProcessManager.m  ZegoCustomVideoRenderManager.h  ZegoCustomVideoRenderManager.m  ZegoExpressEngineEventHandler.h  ZegoExpressEngineEventHandler.m  ZegoExpressEngineMediaPlayerEventHandler.h  ZegoExpressEngineMediaPlayerEventHandler.m  ZegoExpressEngineMethodHandler.h  ZegoExpressEngineMethodHandler.m  ZegoExpressEnginePlugin.m  ZegoExpressFlutterSdkPlugin.h  ZegoExpressFlutterSdkPlugin.m  ZegoLog.h  ZegoLog.m  ZegoMediaPlayerAudioManager.h  ZegoMediaPlayerAudioManager.m  ZegoMediaPlayerBlockDataManager.h  ZegoMediaPlayerBlockDataManager.m  ZegoMediaPlayerVideoManager.h  ZegoMediaPlayerVideoManager.m  ZegoPlatformView.h  ZegoPlatformView.m  ZegoPlatformViewFactory.h  ZegoPlatformViewFactory.m  ZegoPlatformViewRenderController.h  ZegoPlatformViewRenderController.m  ZegoPlatformViewRenderer.h  ZegoPlatformViewRenderer.m  ZegoTextureRenderController.h  ZegoTextureRenderController.m  ZegoTextureRenderer.h  ZegoTextureRenderer.m  ZegoTextureRendererController.h  ZegoTextureRendererController.m  (+2 more)
lib/: zego_express_engine.dart  zego_express_engine_web.dart
lib/src/: zego_express_api.dart  zego_express_api_ai_voice_changer.dart  zego_express_api_audio_effect_player.dart  zego_express_api_copyrighted_music.dart  zego_express_api_custom_audio_io.dart  zego_express_api_custom_video_io.dart  zego_express_api_device.dart  zego_express_api_im.dart  zego_express_api_media_data_publisher.dart  zego_express_api_mediaplayer.dart  zego_express_api_mixer.dart  zego_express_api_player.dart  zego_express_api_preprocess.dart  zego_express_api_publisher.dart  zego_express_api_range_audio.dart  zego_express_api_record.dart  zego_express_api_room.dart  zego_express_api_screen_capture.dart  zego_express_api_utilities.dart  zego_express_assets_utils.dart  zego_express_canvas_view.dart  zego_express_canvas_view_utils.dart  zego_express_defines.dart  zego_express_defines_web.dart  zego_express_enum_extension.dart  zego_express_error_code.dart  zego_express_event_handler.dart  zego_express_impl.dart  zego_express_platform_view_impl.dart  zego_express_platform_view_impl_web.dart  zego_express_platform_view_utils.dart  zego_express_render_view.dart  zego_express_texture_info.dart  zego_express_texture_render_utils.dart
linux/: CMakeLists.txt  ZegoDataTypeConvert.cpp  ZegoDataTypeConvert.h  download.cmake  setup.cmake  zego_express_engine_plugin.cc  zego_express_engine_plugin_private.h
linux/include/zego_express_engine/: zego_express_engine_plugin.h
linux/internal/: DataToImageTools.hpp  ZegoDataTypeConvert.cpp  ZegoDataTypeConvert.h  ZegoDataUtils.cpp  ZegoDataUtils.h  ZegoExpressEngineEventHandler.cpp  ZegoExpressEngineEventHandler.h  ZegoExpressEngineInterface.h  ZegoExpressEngineMethodHandler.cpp  ZegoExpressEngineMethodHandler.h  ZegoTexture.cc  ZegoTexture.h  ZegoTextureRenderer.cpp  ZegoTextureRenderer.h  ZegoTextureRendererController.cpp  ZegoTextureRendererController.h  ZegoUtils.h
linux/internal/universal/: ZegoExpressEngineEventHandler.cpp  ZegoExpressEngineEventHandler.h
macos/: DEPS  download.sh  setup.sh  zego_express_engine.podspec
macos/Classes/: ZegoCustomVideoCaptureManager.h  ZegoCustomVideoCaptureManager.m  ZegoCustomVideoDefine.h  (+12 more)
test/: zego_express_engine_test.dart  zego_express_flutter_sdk_test.dart
windows/: .gitignore  CMakeLists.txt  ZegoCustomVideoCaptureManager.cpp  ZegoCustomVideoProcessManager.cpp  ZegoCustomVideoRenderManager.cpp  ZegoDataTypeConvert.cpp  ZegoDataTypeConvert.h  ZegoDataUtils.cpp  ZegoDataUtils.h  ZegoLog.cpp  ZegoMediaPlayerAudioManager.cpp  ZegoMediaPlayerBlockDataManager.cpp  ZegoMediaPlayerVideoManager.cpp  download.cmake  download_native_sdk.py  zego_express_engine_plugin.cpp  zego_express_flutter_sdk_plugin.cpp
windows/cmake/: download.cmake
windows/include/zego_express_engine/: ZegoCustomVideoCaptureManager.h  ZegoCustomVideoDefine.h  ZegoCustomVideoProcessManager.h  ZegoCustomVideoRenderManager.h  ZegoMediaPlayerAudioManager.h  ZegoMediaPlayerBlockDataManager.h  ZegoMediaPlayerVideoManager.h  zego_express_engine_plugin.h
windows/include/zego_express_flutter_sdk/: zego_express_flutter_sdk_plugin.h
windows/internal/: DataToImageTools.hpp  ZegoDataUtils.cpp  ZegoDataUtils.h  ZegoExpressEngineEventHandler.cpp  ZegoExpressEngineEventHandler.h  ZegoExpressEngineInterface.h  ZegoExpressEngineMethodHandler.cpp  ZegoExpressEngineMethodHandler.h  ZegoLog.h  ZegoTextureRenderer.cpp  ZegoTextureRenderer.h  ZegoTextureRendererController.cpp  ZegoTextureRendererController.h
windows/internal/common/: ZegoExpressEngineEventHandler.cpp  ZegoExpressEngineEventHandler.h  ZegoExpressEngineInterface.h  ZegoExpressEngineMethodHandler.cpp  ZegoExpressEngineMethodHandler.h
windows/internal/universal/: ZegoExpressEngineInterface.h  ZegoExpressEngineMethodHandler.cpp
zego_express_engine/: README.md
(+132 files in other folders)
